<resources>
    <string name="app_name">Impossible Quiz</string>
    <string name="welcome_msg">Welcome to the Impossible Quiz!</string>
    <string name="quiz_logo">Quiz logo</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="exit">Exit</string>
    <string name="credits">Credits</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>

    <string name="credit_info">Developers: Daniel Davis, Dalton Claxton, Peyton White
        \n\nSound: https://patrickdearteaga.com/arcade-music/ \n\nQuiz API: https://jservice.io/
    </string>
    <string name="question">Question %1$d</string>
    <string name="answer">Answer</string>
    <string name="menu">Menu</string>
    <string name="submit">Submit</string>
    <string name="how_far_can_you_go">How far can you go?</string>
    <string name="category">Category: %1$s</string>
    <string name="highscore_msg">High Scores!</string>
    <string name="show_high_scores">Show High Scores</string>
    <string name="credits_msg">Credits</string>
</resources>
