<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.apsu.csci.final_4020.activities.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/app_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/welcome_msg"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/menu_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C6E8FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/quiz_logo"
                    app:srcCompat="@drawable/questionmark" />

                <RadioGroup
                    android:id="@+id/difficulty_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/easy_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/easy" />

                    <RadioButton
                        android:id="@+id/normal_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/normal" />

                    <RadioButton
                        android:id="@+id/hard_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hard" />
                </RadioGroup>

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/highscore_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/high_scores" />

                <Button
                    android:id="@+id/credits_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits" />

                <Button
                    android:id="@+id/exit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onExitButton"
                    android:text="@string/exit" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".16" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
